# triqui-tree

./: .travis.yml  0.bootstrap.js  Cargo.toml  LICENSE  README.es.md  README.md  bootstrap.js  index.html  meson.build  style.css
.github/workflows/: push.yml
include/algorithm/: algorithm.hpp
include/board/: board.hpp
include/triqui/: triqui.hpp
src/: lib.rs  macro_rules.rs  main.cpp  meson.build  utils.rs
src/algorithm/: algorithm.cpp  meson.build
src/board/: board.cpp  meson.build
src/game/structs/: triqui.rs
src/game/traits/: algorithm.rs  board.rs  strategy.rs
src/triqui/: meson.build  triqui.cpp
src/wasm/: controller.rs
www/: functions.js  index.html  index.js  package.json
www/config/: webpack.config.js
www/src/: App.css  App.tsx  index.css
www/src/components/: BoardComponent.tsx  HeaderComponent.tsx  PlayerComponent.tsx  ResultComponent.tsx  SizeComponent.tsx
www/styles/: normalize.css  style.css  style.scss
